Añade ejemplo del componente Scaffold

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">ComposeTrasteo</string>
     <string name="title_activity_boton_contenedor">BotonContenedor</string>
     <string name="title_activity_slots_api">SlotsAPI</string>
+    <string name="title_activity_scaffold_component">ScaffoldComponent</string>
 </resources>
