--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="title_activity_slots_api">SlotsAPI</string>
     <string name="title_activity_scaffold_component">ScaffoldComponent</string>
     <string name="title_activity_listas_elementos">ListasElementos</string>
+    <string name="title_activity_compose_view_model">ComposeViewModel</string>
 </resources>
